--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "less-loader": "^4.1.0",
     "swiper": "^6.3.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.4.7"
+    "vue-router": "^3.4.7",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
